// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls rendering 1`] = `
<div
  id="control-buttons"
>
  <a
    className="btn btn-default"
    href="#"
    onClick={[Function]}
  >
    LISTEN
  </a>
  
</div>
`;

exports[`Controls rendering 2`] = `
<div
  id="control-buttons"
>
  <a
    className="btn btn-default"
    href="#"
    onClick={[Function]}
  >
    STOP
  </a>
  
</div>
`;

exports[`Controls rendering 3`] = `
<div
  id="control-buttons"
>
  <a
    className="btn btn-default"
    href="#"
    onClick={[Function]}
  >
    LISTEN
  </a>
  <a
    className="btn btn-danger"
    href="#"
    onClick={[Function]}
  >
    CLEAR
  </a>
</div>
`;

exports[`Controls rendering 4`] = `
<div
  id="control-buttons"
>
  <a
    className="btn btn-default"
    href="#"
    onClick={[Function]}
  >
    STOP
  </a>
  <a
    className="btn btn-danger"
    href="#"
    onClick={[Function]}
  >
    CLEAR
  </a>
</div>
`;
